--- a/src/main/resources/templates/manager/coupon.html
+++ b/src/main/resources/templates/manager/coupon.html
@@ -368,21 +368,12 @@
        $(".approve-request-user").on('click', function(e) {
            const couponId = $(this).val()
            requestCouponId = couponId
-           $.ajax({
-               type: 'GET',
-               url: `/api/coupon-request-by/${couponId}`,
-               dataType: 'json',
-               contentType: 'application/json',
-               success: function (data) {
-                   if(data.httpStatus === 200) {
-                       drawRequestTable(data.message)           // 쿠폰 요청 승인 테이블 만들기
-                       $("#request-user-modal").modal('show')
-                   }
-               },
-               error: function (xhr, status, error) {
-                   console.error('Error getting password:', error);
+           Http.get(`/api/coupon-request-by/${couponId}`).then((res) => {
+               if(res['httpStatus'] === 200) {
+                   drawRequestTable(res.message)           // 쿠폰 요청 승인 테이블 만들기
+                   $("#request-user-modal").modal('show')
                }
-           });
+           })
        })
 
        /* 요청 승인 모달 테이블 만들기 */
@@ -436,25 +427,15 @@
            if(lst.length === 0) Util.alert('승인할 사용자 요청을 선택하세요.', 'w', 'w')
            else {
                const obj = {'couponId': requestCouponId, 'requestId': lst, 'userId': user}
-               $.ajax({
-                   type: 'PUT',
-                   url: `/api/coupon-request-approve`,
-                   dataType: 'json',
-                   data: JSON.stringify(obj),
-                   contentType: 'application/json',
-                   success: function (data) {
-                       if (data.httpStatus === 200) {
-                           Util.alert(`${data.message}명의 요청을 승인했습니다.`).then(() => {
-                               window.location.href = '/manager/coupon'
-                           })
-                       } else {
-                           Util.alert(`죄송합니다. 요청 승인에 실패했습니다.`, 'w', 'w')
-                       }
-                   },
-                   error: function (xhr, status, error) {
-                       console.error('Error getting password:', error);
+               Http.put(`/api/coupon-request-approve`, obj).then((res) => {
+                   if (res['httpStatus'] === 200) {
+                       Util.alert(`${res.message}명의 요청을 승인했습니다.`).then(() => {
+                           window.location.href = '/manager/coupon'
+                       })
+                   } else {
+                       Util.alert(`죄송합니다. 요청 승인에 실패했습니다.`, 'w', 'w')
                    }
-               });
+               })
            }
        })
 
@@ -468,25 +449,15 @@
            if(lst.length === 0) Util.alert('쿠폰을 발급할 사용자를 선택하세요.', 'w', 'w')
            else {
                const obj = {'couponId': chooseCouponId, 'userId': lst}      // 체크된 사용자들에게 쿠폰 발급
-               $.ajax({
-                   type: 'POST',
-                   url: `/api/coupon-has-user`,
-                   dataType: 'json',
-                   data: JSON.stringify(obj),
-                   contentType: 'application/json',
-                   success: function (data) {
-                       if (data.httpStatus === 200) {
-                           Util.alert(`총 ${data.message}명에게 ${chooseCouponId}번 쿠폰이 지급되었습니다.`).then(() => {
-                               window.location.href = '/manager/coupon'
-                           })
-                       } else {
-                           Util.alert(`죄송합니다. 쿠폰 발급에 실패했습니다.`, 'w', 'w')
-                       }
-                   },
-                   error: function (xhr, status, error) {
-                       console.error('Error getting password:', error);
+               Http.post(`/api/coupon-has-user`, obj).then((res) => {
+                   if (res['httpStatus'] === 200) {
+                       Util.alert(`총 ${res.message}명에게 ${chooseCouponId}번 쿠폰이 지급되었습니다.`).then(() => {
+                           window.location.href = '/manager/coupon'
+                       })
+                   } else {
+                       Util.alert(`죄송합니다. 쿠폰 발급에 실패했습니다.`, 'w', 'w')
                    }
-               });
+               })
            }
        })
 
@@ -496,23 +467,15 @@
 
            Util.confirm('해당 쿠폰을 삭제하시겠습니까?').then((isOk) => {
                if(isOk) {
-                   $.ajax({
-                       type: "DELETE",
-                       url: `/api/coupon/${couponId}`,
-                       success: function (data) {
-                           if(data.httpStatus === 200) {
-                               Util.alert(`${data.message}`).then(() => {
-                                   window.location.href = `/manager/coupon`
-                               })
-                           }else {
-                               Util.alert("삭제에 실패했습니다.", 'w', 'w')
-                           }
-                       },
-                       error: function (error) {
-                           // Handle the error response
-                           console.error("upload error:", error);
+                   Http.delete(`/api/coupon/${couponId}`).then((res) => {
+                       if(res['httpStatus'] === 200) {
+                           Util.alert(`${res.message}`).then(() => {
+                               window.location.href = `/manager/coupon`
+                           })
+                       }else {
+                           Util.alert("삭제에 실패했습니다.", 'w', 'w')
                        }
-                   });
+                   })
                }
            })
        })
@@ -521,26 +484,17 @@
        $(".coupon-update-btn").on('click', function(e){
            const couponId = $(this).val()
 
-           $.ajax({
-               type: 'GET',
-               url: `/api/coupon/${couponId}`,
-               dataType: 'json',
-               contentType: 'application/json',
-               success: function (data) {
-                   if(data.httpStatus === 200) {
-                       hongCouponId= data.message['couponId']
-                       $("#update-couponName").val(data.message['couponName'])
-                       $("#update-couponRate").val(data.message['couponRate'])
-                       $(`#update-useAt-${data.message['useAt']}`).prop('checked', true)
-                       $("#update-startDate").val(data.message['startDate'])
-                       $("#update-endDate").val(data.message['endDate'])
-                       $("#update-coupon-modal").modal('show')              // 쿠폰 수정 모달 띄우기
-                   }
-               },
-               error: function (xhr, status, error) {
-                   console.error('Error getting password:', error);
+           Http.get(`/api/coupon/${couponId}`).then((res) => {
+               if(res['httpStatus'] === 200) {
+                   hongCouponId= res.message['couponId']
+                   $("#update-couponName").val(res.message['couponName'])
+                   $("#update-couponRate").val(res.message['couponRate'])
+                   $(`#update-useAt-${res.message['useAt']}`).prop('checked', true)
+                   $("#update-startDate").val(res.message['startDate'])
+                   $("#update-endDate").val(res.message['endDate'])
+                   $("#update-coupon-modal").modal('show')              // 쿠폰 수정 모달 띄우기
                }
-           });
+           })
        })
 
        /* 쿠폰 등록하기 모달 닫기 이벤트 */
@@ -592,25 +546,15 @@
 
                        if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w', 'w')       // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
                        else {
-                           $.ajax({
-                               type: 'POST',
-                               url: `/api/coupon`,
-                               dataType: 'json',
-                               data: JSON.stringify(obj),
-                               contentType: 'application/json',
-                               success: function (data) {
-                                   if (data.httpStatus === 200) {
-                                       Util.alert(`쿠폰이 추가되었습니다.`).then(() => {
-                                           window.location.href = '/manager/coupon'
-                                       })
-                                   } else {
-                                       Util.alert(`쿠폰 등록에 실패했습니다.`, 'w', 'w')
-                                   }
-                               },
-                               error: function (xhr, status, error) {
-                                   console.error('Error getting password:', error);
+                           Http.post(`/api/coupon`, obj).then((res) => {
+                               if (res['httpStatus'] === 200) {
+                                   Util.alert(`쿠폰이 추가되었습니다.`).then(() => {
+                                       window.location.href = '/manager/coupon'
+                                   })
+                               } else {
+                                   Util.alert(`쿠폰 등록에 실패했습니다.`, 'w', 'w')
                                }
-                           });
+                           })
                        }
                    })
                }
@@ -634,25 +578,15 @@
 
                        if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w', 'w')  // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
                        else {
-                           $.ajax({
-                               type: 'PUT',
-                               url: `/api/coupon/${hongCouponId}`,
-                               dataType: 'json',
-                               data: JSON.stringify(obj),
-                               contentType: 'application/json',
-                               success: function (data) {
-                                   if (data.httpStatus === 200) {
-                                       Util.alert("쿠폰 정보를 변경하였습니다.").then(() => {
-                                           window.location.href = `/manager/coupon`
-                                       })
-                                   } else {
-                                       Util.alert("쿠폰 변경에 실패했습니다.", 'w', 'w')
-                                   }
-                               },
-                               error: function (xhr, status, error) {
-                                   console.error('Error getting password:', error);
+                           Http.put(`/api/coupon/${hongCouponId}`, obj).then((res) => {
+                               if (res['httpStatus'] === 200) {
+                                   Util.alert("쿠폰 정보를 변경하였습니다.").then(() => {
+                                       window.location.href = `/manager/coupon`
+                                   })
+                               } else {
+                                   Util.alert("쿠폰 변경에 실패했습니다.", 'w', 'w')
                                }
-                           });
+                           })
                        }
                    })
                }
