--- a/src/main/resources/templates/order/shopIndex.html
+++ b/src/main/resources/templates/order/shopIndex.html
@@ -198,25 +198,15 @@
 
             Util.confirm("해당 상품들을 결제하시겠습니까?").then((isOk) => {
                 if(isOk) {
-                    $.ajax({
-                        type: 'POST',
-                        url: `/api/order-from-shop`,
-                        dataType: 'json',
-                        data: JSON.stringify(obj),
-                        contentType: 'application/json',
-                        success: function (data) {
-                            if (data.httpStatus === 200) {
-                                Util.alert(`${data.message}번으로 주문되었습니다.`).then(() => {
-                                    window.location.href = '/user/order'
-                                })
-                            } else {
-                                Util.alert("주문에 실패했습니다.", 'w', 'w')
-                            }
-                        },
-                        error: function (xhr, status, error) {
-                            console.error('Error getting password:', error);
+                    Http.post(`/api/order-from-shop`, obj).then((res) => {
+                        if (res['httpStatus'] === 200) {
+                            Util.alert(`${res.message}번으로 주문되었습니다.`).then(() => {
+                                window.location.href = '/user/order'
+                            })
+                        } else {
+                            Util.alert("주문에 실패했습니다.", 'w', 'w')
                         }
-                    });
+                    })
                 }
             })
         })
@@ -251,25 +241,16 @@
                     Util.confirm("현재 주소를 사용자 주소 정보로 수정하시겠습니까?").then((isOk) => {
                         if(isOk) {
                             FormDataToObj.getParameter("update-address-form").then(obj => {
-                                $.ajax({
-                                    type: 'PUT',
-                                    url: `/api/user`,
-                                    dataType: 'json',
-                                    data: JSON.stringify(obj),
-                                    contentType: 'application/json',
-                                    success: function (data) {
-                                        if (data.httpStatus === 200) {
-                                            Util.alert("주소 정보를 변경하였습니다.").then(() => {
-                                                addressChanging(true)
-                                            })
-                                        } else {
-                                            Util.alert("주소 변경에 실패하였습니다.", 'w', 'w')
-                                        }
-                                    },
-                                    error: function (xhr, status, error) {
-                                        console.error('Error getting password:', error);
+
+                                Http.put(`/api/user`, obj).then((res) => {
+                                    if (res['httpStatus'] === 200) {
+                                        Util.alert("주소 정보를 변경하였습니다.").then(() => {
+                                            addressChanging(true)
+                                        })
+                                    } else {
+                                        Util.alert("주소 변경에 실패하였습니다.", 'w', 'w')
                                     }
-                                });
+                                })
                             })
                         } else {
                             addressChanging(true)
