commit 146 : $.ajax -> 공통처리 [ 상품주문화면, 게시판 섹션 (3)]

--- a/src/main/resources/static/assets/css/category/category.shop.css
+++ b/src/main/resources/static/assets/css/category/category.shop.css
@@ -69,6 +69,7 @@
 /* 장바구니 page -> checkbox div */
 .top-checkbox {
     position: relative;
+    margin-left: 10px;
 }
 
 /* 장바구니 page -> checkbox */
