--- a/src/main/resources/templates/bbs/qna/view.html
+++ b/src/main/resources/templates/bbs/qna/view.html
@@ -8,7 +8,7 @@
     <title>HONG SHOP</title>
     <style>
         .ck-editor__editable { height: 300px; }
-        .ck-content { font-size: 12px; }
+        .ck-content { font-size: 14px; }
     </style>
 </th:block>
 
@@ -171,7 +171,7 @@
                 const body =
                     `
                     <li style="margin-top: 10px;">
-                        <a href="#" onclick="downloadFile(${value.id})">
+                        <a href="#" onclick="Http.fileDownload(${value.id})">
                             <i data-feather="download" class="front-medium-2"></i>
                         </a>
                         ${value['originalFileName']}
@@ -182,151 +182,90 @@
             feather.replace()
         }
 
+        /* 댓글 삭제버튼 클릭 이벤트 */
         function deleteAnswer(id) {
             Util.confirm("삭제 하시겠습니까?").then((isOk) => {
                 if(isOk) {
-                    $.ajax({
-                        type: "DELETE",
-                        url: `/api/answer/${id}`,
-                        success: function (response) {
-                            if (response['httpStatus'] === 200) {
-                                Util.alert("답변이 삭제되었습니다.").then(() => {
-                                    window.location.href = `/bbs/view/${post['id']}`
-                                })
-                            }
-                        },
-                        error: function (error) {
-                            // Handle the error response
-                            console.error("upload error:", error);
+                    Http.delete(`/api/answer/${id}`).then((res) => {
+                        if (res['httpStatus'] === 200) {
+                            Util.alert("답변이 삭제되었습니다.").then(() => {
+                                window.location.href = `/bbs/view/${post['id']}`
+                            })
                         }
-                    });
+                    })
                 }
             })
         }
 
+        /* 댓글 수정버튼 클릭 이벤트 */
         function editAnswer(id) {
-            $.ajax({
-                type: "GET",
-                url: `/api/answer/${id}`,
-                success: function(response) {
-                    if(response.httpStatus === 200){
-                        $("#edit-answer").val(response['message']['content'])
-                        answerId = response['message']['id']
-                        $("#editAnswerModal").modal("show")
-                    }
-                },
-                error: function(error) {
-                    // Handle the error response
-                    console.error("upload error:", error);
+            Http.get(`/api/answer/${id}`).then((res) => {
+                if(res['httpStatus'] === 200){
+                    $("#edit-answer").val(res['message']['content'])
+                    answerId = res['message']['id']
+                    $("#editAnswerModal").modal("show")
                 }
-            });
+            })
         }
 
-        function downloadFile(id) {
-            let filename = '';
-
-            fetch(`/api/downloadFile/${id}`)
-                .then(response => {
-                    const contentDisposition = response.headers.get('Content-Disposition');
-                    const matches = /filename[^;=\n]*=((['"]).*?\2|[^;\n]*)/.exec(contentDisposition);
-                    filename = matches && matches[1] ? matches[1].replace(/['"]/g, '').replace('UTF-8', '') : "";
-                    if(filename) return response.blob();
-                })
-                .then(blob => {
-                    const link = document.createElement('a');
-                    link.href = window.URL.createObjectURL(blob);
-                    link.setAttribute('download', decodeURIComponent(filename));
-                    link.style.display = 'none';
-                    document.body.appendChild(link);
-                    link.click();
-                    document.body.removeChild(link);
-                })
-                .catch(error => {
-                    console.log("error : ", error)
-                })
-        }
-
+        /* 게시글 삭제버튼 클릭 이벤트 */
         $("#delete-btn").on("click", function(e) {
             Util.confirm("삭제 하시겠습니까?").then((isOk) => {
                 if(isOk) {
-                    $.ajax({
-                        type: "DELETE",
-                        url: `/api/post/${post['id']}`,
-                        success: function (response) {
-                            if (response['httpStatus'] === 200) {
-                                Util.alert("게시글이 삭제되었습니다.").then(() => {
-                                    window.location.href = `/bbs/${post['typeId']}`
-                                })
-                            }
-                        },
-                        error: function (error) {
-                            // Handle the error response
-                            console.error("upload error:", error);
+                    Http.delete(`/api/post/${post['id']}`).then((res) => {
+                        if (res['httpStatus'] === 200) {
+                            Util.alert("게시글이 삭제되었습니다.").then(() => {
+                                window.location.href = `/bbs/${post['typeId']}`
+                            })
                         }
-                    });
+                    })
                 }
             })
         })
 
+        /* 목록버튼 클릭 이벤트 */
         $("#list-btn").on("click", function(e){
             window.location.href = `/bbs/${post['typeId']}`
         })
 
+        /* 수정버튼 클릭 이벤트 */
         $("#edit-btn").on("click", function(e){
             window.location.href = `/bbs/edit/${post['id']}`
         })
 
+        /* 답변 추가 모달 -> 저장버튼 클릭 이벤트 */
         $("#save-answer-btn").on("click", function(e){
             const content = $("#save-answer").val()
             const hongPostId = post['id']
             const obj = { content, hongPostId }
 
-            $.ajax({
-                type: "POST",
-                url: `/api/answer`,
-                data: JSON.stringify(obj),
-                contentType: "application/json",
-                success: function(response) {
-                    if(response.httpStatus === 200){
-                        Util.alert("답변이 등록되었습니다.").then(() => {
-                            $("#saveAnswerModal").modal("hide")
-                            window.location.href = `/bbs/view/${post['id']}`
-                        })
-                    }
-                },
-                error: function(error) {
-                    // Handle the error response
-                    console.error("upload error:", error);
+            Http.post(`/api/answer`, obj).then((res) => {
+                if(res['httpStatus'] === 200){
+                    Util.alert("답변이 등록되었습니다.").then(() => {
+                        $("#saveAnswerModal").modal("hide")
+                        window.location.href = `/bbs/view/${post['id']}`
+                    })
                 }
-            });
+            })
         })
 
+        /* 답변 수정 모달 -> 저장버튼 클릭 이벤트 */
         $("#edit-answer-btn").on("click", function(e) {
             const content = $("#edit-answer").val()
             const hongPostId = post['id']
             const obj = { content, hongPostId }
 
-            $.ajax({
-                type: "PUT",
-                url: `/api/answer/${answerId}`,
-                data: JSON.stringify(obj),
-                contentType: "application/json",
-                success: function(response) {
-                    if(response.httpStatus === 200){
-                        Util.alert("답변이 수정되었습니다.").then(() => {
-                            $("#editAnswerModal").modal("hide")
-                            window.location.href = `/bbs/view/${post['id']}`
-                        })
-                    }
-                },
-                error: function(error) {
-                    // Handle the error response
-                    console.error("upload error:", error);
+            Http.put(`/api/answer/${answerId}`, obj).then((res) => {
+                if(res['httpStatus'] === 200){
+                    Util.alert("답변이 수정되었습니다.").then(() => {
+                        $("#editAnswerModal").modal("hide")
+                        window.location.href = `/bbs/view/${post['id']}`
+                    })
                 }
-            });
-
+            })
         })
 
+        /* 답변 작성하기 버튼 클릭 이벤트 */
         $("#show-modalAnswer").on("click", function(e) {
             $("#saveAnswerModal").modal("show")
         })
